fixed spacing on details page and hover for logout

--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -382,6 +382,7 @@ h3 {
 
 .Date_Picker_Main {
   width: 300px;
+  text-align: center;
 }
 
 
